@@ -1,5 +1,6 @@
 v4.4 (xx 2014)
-* Allow multiple seasonal objects "msts" in hts() and gts().
+* Allowed multiple seasonal objects "msts" in hts() and gts().
+* Fixed bug of MASE in accuracy.gts().
 
 v4.3 (10 June 2014)
 * Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
